--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@100;300;400;500&display=swap');
 :root{
    --primary:#fe2c55;
+
+   // default layout
+   --default-layout-header-height:60px;
+   --default-layout-width:1150px;
+   --black: #000000;
+   --text-color:#333
 }
 *{
     box-sizing: border-box;
@@ -17,4 +23,13 @@ body{
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed; //tối ưu để hiển thị nhanh nhất
+    color: var(--text-color);
+}
+button , input, [tabindex]{
+    outline: none;
+    border: none;
+}
+a[href]{
+    color: var(--text-color);
+    text-decoration: none;
 }
