--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -1,12 +1,75 @@
 .wrapper{
+    --search-border-radius:92px;
+    --search-height:46px;
+    --search-top-space: 9px;
+    --search-button-width:52px;
     width: 100%;
-    height: 60px;
+    height: var( --default-layout-header-height);
     box-shadow: 0 1px  1px rgb(0 0 0 /12%);
     display: flex;
     justify-content: center;
 }
 .inner{
-    width: 1150px;
+    display: flex;
+    justify-content: space-between;
+    align-items:center ;
+    width: var(--default-layout-width);
     height: 100%;
-    background-color: #ccc;
+}
+.search{
+  position: relative;
+  width: 361px;
+  height: var(--search-height);
+  display: flex;
+  padding-left:16px;
+  background-color: rgb(22, 24, 35, 0.06);
+  border-radius: var(--search-border-radius);
+  border-color:  solid transparent;
+  
+  input{
+    flex: 1;
+    color:var(--black);
+    font-size: 1.6rem;
+    height: 100%;
+    background-color: transparent;
+    caret-color: var(--primary);
+  }
+  input:not(:placeholder-shown) ~ .search-btn{ //Khi người dùng ấn vào input thì nút button sẽ đổi màu
+    color: rgb(22, 24, 35, 0.75);
+  }
+
+  &::after{
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: calc(var(--search-height) - var(--search-top-space) * 2);
+    background-color: rgb(22, 24, 35, 0.12);
+    right: var( --search-button-width);
+    top: calc(var(--search-top-space) );
+  }
+  &:focus-within{
+    border: 1.5px solid rgb(22, 24, 35, 0.2);
+  }
+}
+.clear,.loading{
+   position: absolute;
+   right: calc(var( --search-button-width) + 16px);
+   top: 50%;
+   transform: translateY(-50%);
+   color: rgb(22, 24, 35, 0.34);
+}
+.search-btn{
+   width: var( --search-button-width);
+   height: 100%;
+   border-top-right-radius: var(--search-border-radius);
+   border-bottom-right-radius: var(--search-border-radius);
+   font-size: 1.8rem;
+   color: rgb(22, 24, 35, 0.34);
+   &:hover{
+       cursor: pointer;
+       background-color: rgb(22, 24, 35, 0.03);
+   }
+   &:active{
+       background-color: rgb(22, 24, 35, 0.06);
+   }
 }
