--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -16,40 +16,49 @@
     width: var(--default-layout-width);
     height: 100%;
 }
-.search{
-  position: relative;
+.search-result{
   width: 361px;
-  height: var(--search-height);
-  display: flex;
-  padding-left:16px;
-  background-color: rgb(22, 24, 35, 0.06);
-  border-radius: var(--search-border-radius);
-  border-color:  solid transparent;
+}
+.search-title{
+    padding: 5px 12px;
+    color: rgba(22, 24, 35,0.5); 
+    font-size: 1.4rem;
+    width: 600px;
+}
+.search{
+    position: relative;
+    width: 361px;
+    height: var(--search-height);
+    display: flex;
+    padding-left:16px;
+    background-color: rgb(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
+    border-color:  solid transparent;
   
-  input{
-    flex: 1;
-    color:var(--black);
-    font-size: 1.6rem;
-    height: 100%;
-    background-color: transparent;
-    caret-color: var(--primary);
-  }
-  input:not(:placeholder-shown) ~ .search-btn{ //Khi người dùng ấn vào input thì nút button sẽ đổi màu
-    color: rgb(22, 24, 35, 0.75);
-  }
+    input{
+      flex: 1;
+      color:var(--black);
+      font-size: 1.6rem;
+      height: 100%;
+      background-color: transparent;
+      caret-color: var(--primary);
+    }
+    input:not(:placeholder-shown) ~ .search-btn{ //Khi người dùng ấn vào input thì nút button sẽ đổi màu
+      color: rgb(22, 24, 35, 0.75);
+    }
 
-  &::after{
-    content: '';
-    position: absolute;
-    width: 1px;
-    height: calc(var(--search-height) - var(--search-top-space) * 2);
-    background-color: rgb(22, 24, 35, 0.12);
-    right: var( --search-button-width);
-    top: calc(var(--search-top-space) );
-  }
-  &:focus-within{
-    border: 1.5px solid rgb(22, 24, 35, 0.2);
-  }
+    &::after{
+      content: '';
+      position: absolute;
+      width: 1px;
+      height: calc(var(--search-height) - var(--search-top-space) * 2);
+      background-color: rgb(22, 24, 35, 0.12);
+      right: var( --search-button-width);
+      top: calc(var(--search-top-space) );
+    }
+    &:focus-within{
+      border: 1.5px solid rgb(22, 24, 35, 0.2);
+    }
 }
 .clear,.loading{
    position: absolute;
