--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -7,7 +7,8 @@
    --default-layout-header-height:60px;
    --default-layout-width:1150px;
    --black: #000000;
-   --text-color:#333
+   --text-color:#333;
+   --white: #fff
 }
 *{
     box-sizing: border-box;
