--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -27,6 +27,11 @@
 .icon + .title, .title + .icon{
     margin-left: 8px;
 }
+.icon{
+    display: inline-block;
+    text-align: center;
+    width: 24px;
+}
 //Button type
 .rounded{
     border-radius: 999px;
