--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,7 @@
    // default layout
    --default-layout-header-height:60px;
    --default-layout-width:1150px;
+   --default-layout-horizontal-spacer:24px;
    --black: #000000;
    --text-color:#333;
    --white: #fff
