--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items:center ;
+    padding: 0 var(--default-layout-horizontal-spacer);
     width: var(--default-layout-width);
     height: 100%;
 }
@@ -83,3 +84,10 @@
    }
 }
 
+.more-btn{
+  font-size: 2rem;
+  margin-left: 28px;
+  padding: 4px 8px;
+  background-color: transparent;
+  cursor: pointer;
+}
