--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -3,8 +3,9 @@
     align-items: center;
     justify-content: center;
     font-size: 1.6rem;
-    padding: 9px 16px;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 700;
+    padding: 9px 16px;
     min-width: 100px;
     border-radius: 4px;
     cursor: pointer;
