--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -30,16 +30,31 @@
   align-items: center;
 }
 .action-btn{
+  display: flex;
+  position: relative;
   color: #161823;
   font-size: 2.2rem;
-  padding:4px 12px ;
+  padding:4px 10px ;
   cursor: pointer;
   background-color: transparent;
+}
+.badge {
+  position: absolute;
+  top: -3px;
+  right: 0px;
+  padding: 0px 6px;
+  height: 2rem;
+  line-height: 2rem;
+  border-radius: 10px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: var(--white);
+  background-color: var(--primary);
 }
 .user-avata{
   width: 32px;
   height: 32px;
-  margin-left: 12px;
+  margin-left: 14px;
   border-radius: 50%;
   object-fit: cover;
   cursor: pointer;
