--- a/src/component/Layout/components/Search/Search.module.scss
+++ b/src/component/Layout/components/Search/Search.module.scss
@@ -49,7 +49,22 @@
      transform: translateY(-50%);
      color: rgb(22, 24, 35, 0.34);
   }
+.loading{
+     //Quay trong vòng 0.8 giây, theo kiển linear, infinite quay vô hạn
+     animation: spinner 0.8s linear infinite;
+}
+@keyframes spinner{
+   from{
+     transform:translateY(-50%) rotate(0);
+   }
+   to{
+    transform: translateY(-50%) rotate(360deg);
+   }
+}
   .search-btn{
+     display: flex;
+     align-items: center;
+     justify-content: center;
      width: var( --search-button-width);
      height: 100%;
      border-top-right-radius: var(--search-border-radius);
@@ -64,4 +79,4 @@
          background-color: rgb(22, 24, 35, 0.06);
      }
   }
-  
+
