--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -1,56 +1,76 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@100;300;400;500&display=swap');
-:root{
-   --primary:#fe2c55;
+:root {
+    --primary: #fe2c55;
 
-   // default layout
-   --default-layout-header-height:60px;
-   --default-layout-width:1150px;
-   --default-layout-horizontal-spacer:24px;
-   --black: #000000;
-   --text-color:#161823;
-   --white: #fff
+    // default layout
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
+    --default-layout-horizontal-spacer: 24px;
+    --black: #000000;
+    --text-color: #161823;
+    --white: #fff;
 }
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-html{
+html {
     font-size: 62.5%;
 }
-body{
-    font-family: "IBM Plex Sans", sans-serif;
+body {
+    font-family: 'IBM Plex Sans', sans-serif;
     // font-family: "Roboto", sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed; //tối ưu để hiển thị nhanh nhất
     color: var(--text-color);
+    overflow-y: overlay;
 }
-button , input, [tabindex]{
+//Scrollbar CSS
+html ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 0.08);
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 0.08);
+}
+html ::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: rgba(0, 0, 0, 0);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+button,
+input,
+[tabindex] {
     outline: none;
     border: none;
 }
-a[href]{
+a[href] {
     color: var(--text-color);
     text-decoration: none;
 }
 //Custom tippy tooltip
 body {
-    .tippy-box{
-    border-radius: 8px;
-    font-weight: 600;
-    font-size: 1.6rem;
-    line-height: 2.2rem;
-   background-color: rgba(84, 84,84 ,0.92);
-}  
-   .tippy-arrow{
-    color: rgba(84, 84,84 ,0.92);
-   }
-   .tippy-content{
-    padding: 8px 9px;
-   }
-   .tippy-box[data-placement^=bottom]>.tippy-arrow::before{
-    top: -8px;
-   }
+    .tippy-box {
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+        background-color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-arrow {
+        color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-content {
+        padding: 8px 9px;
+    }
+    .tippy-box[data-placement^='bottom'] > .tippy-arrow::before {
+        top: -8px;
+    }
 }
