--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -1,64 +1,70 @@
-.wrapper{
-    --search-border-radius:92px;
-    --search-height:46px;
+.wrapper {
+    --search-border-radius: 92px;
+    --search-height: 46px;
     --search-top-space: 9px;
-    --search-button-width:52px;
-    width: 100%;
-    height: var( --default-layout-header-height);
-    box-shadow: 0 1px  1px rgb(0 0 0 /12%);
+    --search-button-width: 52px;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: var(--default-layout-header-height);
+    box-shadow: 0 1px 1px rgb(0 0 0 /12%);
+    background-color: var(--white);
 }
-.inner{
+.inner {
     display: flex;
     justify-content: space-between;
-    align-items:center ;
+    align-items: center;
     padding: 0 var(--default-layout-horizontal-spacer);
     width: var(--default-layout-width);
     height: 100%;
 }
-.more-btn{
-  font-size: 2rem;
-  margin-left: 28px;
-  padding: 4px 8px;
-  background-color: transparent;
-  cursor: pointer;
+.more-btn {
+    font-size: 2rem;
+    margin-left: 28px;
+    padding: 4px 8px;
+    background-color: transparent;
+    cursor: pointer;
 }
-.logo-link{
-  display: flex;
+.logo-link {
+    display: flex;
 }
 //Actions
-.actions{
-  display: flex;
-  align-items: center;
+.actions {
+    display: flex;
+    align-items: center;
 }
-.action-btn{
-  display: flex;
-  position: relative;
-  color: #161823;
-  font-size: 2.2rem;
-  padding:4px 10px ;
-  cursor: pointer;
-  background-color: transparent;
+.action-btn {
+    display: flex;
+    position: relative;
+    color: #161823;
+    font-size: 2.2rem;
+    padding: 4px 10px;
+    cursor: pointer;
+    background-color: transparent;
 }
 .badge {
-  position: absolute;
-  top: -3px;
-  right: 0px;
-  padding: 0px 6px;
-  height: 2rem;
-  line-height: 2rem;
-  border-radius: 10px;
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: var(--white);
-  background-color: var(--primary);
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--white);
+    background-color: var(--primary);
 }
-.user-avata{
-  width: 32px;
-  height: 32px;
-  margin-left: 14px;
-  border-radius: 50%;
-  object-fit: cover;
-  cursor: pointer;
+.user-avata {
+    width: 32px;
+    height: 32px;
+    margin-left: 14px;
+    border-radius: 50%;
+    object-fit: cover;
+    cursor: pointer;
 }
