--- a/src/component/Popper/Menu/Menu.module.scss
+++ b/src/component/Popper/Menu/Menu.module.scss
@@ -1,7 +1,7 @@
 //Menu wrapper
-.menu-list{
+.menu-list {
     width: 224px;
-    .menu-item{
+    .menu-item {
         display: flex;
         justify-content: start;
         margin-left: 0;
@@ -11,35 +11,38 @@
         padding: 11px 16px;
         line-height: 1.8rem;
         font-weight: 600;
-        &.separate{
-            border-top: 1px solid rgba(22,24,35,0.12);
+        &.separate {
+            border-top: 1px solid rgba(22, 24, 35, 0.12);
         }
-        &:hover{
-            background-color: rgba(22, 24, 35,0.03);
+        &:hover {
+            background-color: rgba(22, 24, 35, 0.03);
         }
     }
 }
 // Menu items
-.menu-popper{
+.menu-popper {
     padding-bottom: 8px;
 }
-
+.menu-body {
+    overflow-y: auto;
+}
 //Header language
-.header{
+.header {
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
-.header-btn{
+.header-btn {
     width: 50px;
     height: 100%;
     font-size: 2rem;
     background-color: transparent;
     cursor: pointer;
 }
-.header-title{
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
+.header-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
