--- a/src/Layout/components/Search/Search.module.scss
+++ b/src/Layout/components/Search/Search.module.scss
@@ -1,82 +1,84 @@
-.search-result{
+.search-result {
     width: 361px;
-  }
-  .search-title{
-      padding: 5px 12px;
-      color: rgba(22, 24, 35,0.5); 
-      font-size: 1.4rem;
-      width: 600px;
-  }
-  .search{
-      position: relative;
-      width: 361px;
-      height: var(--search-height);
-      display: flex;
-      padding-left:16px;
-      background-color: rgb(22, 24, 35, 0.06);
-      border-radius: var(--search-border-radius);
-      border-color:  solid transparent;
-    
-      input{
+}
+.search-title {
+    padding: 5px 12px;
+    color: rgba(22, 24, 35, 0.5);
+    font-size: 1.4rem;
+    width: 600px;
+}
+.search {
+    position: relative;
+    width: 361px;
+    height: var(--search-height);
+    display: flex;
+    padding-left: 16px;
+    background-color: rgb(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
+    border-color: solid transparent;
+
+    input {
         flex: 1;
-        color:var(--black);
+        color: var(--black);
         font-size: 1.6rem;
+        padding-right: 40px;
         height: 100%;
         background-color: transparent;
         caret-color: var(--primary);
-      }
-      input:not(:placeholder-shown) ~ .search-btn{ //Khi người dùng ấn vào input thì nút button sẽ đổi màu
+    }
+    input:not(:placeholder-shown) ~ .search-btn {
+        //Khi người dùng ấn vào input thì nút button sẽ đổi màu
         color: rgb(22, 24, 35, 0.75);
-      }
-  
-      &::after{
+    }
+
+    &::after {
         content: '';
         position: absolute;
         width: 1px;
         height: calc(var(--search-height) - var(--search-top-space) * 2);
         background-color: rgb(22, 24, 35, 0.12);
-        right: var( --search-button-width);
-        top: calc(var(--search-top-space) );
-      }
-      &:focus-within{
+        right: var(--search-button-width);
+        top: calc(var(--search-top-space));
+    }
+    &:focus-within {
         border: 1.5px solid rgb(22, 24, 35, 0.2);
-      }
-  }
-  .clear,.loading{
-     position: absolute;
-     right: calc(var( --search-button-width) + 16px);
-     top: 50%;
-     transform: translateY(-50%);
-     color: rgb(22, 24, 35, 0.34);
-  }
-.loading{
-     //Quay trong vòng 0.8 giây, theo kiển linear, infinite quay vô hạn
-     animation: spinner 0.8s linear infinite;
+    }
 }
-@keyframes spinner{
-   from{
-     transform:translateY(-50%) rotate(0);
-   }
-   to{
-    transform: translateY(-50%) rotate(360deg);
-   }
+.clear,
+.loading {
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgb(22, 24, 35, 0.34);
 }
-  .search-btn{
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     width: var( --search-button-width);
-     height: 100%;
-     border-top-right-radius: var(--search-border-radius);
-     border-bottom-right-radius: var(--search-border-radius);
-     font-size: 1.8rem;
-     color: rgb(22, 24, 35, 0.34);
-     &:hover{
-         cursor: pointer;
-         background-color: rgb(22, 24, 35, 0.03);
-     }
-     &:active{
-         background-color: rgb(22, 24, 35, 0.06);
-     }
-  }
-
+.loading {
+    //Quay trong vòng 0.8 giây, theo kiển linear, infinite quay vô hạn
+    animation: spinner 0.8s linear infinite;
+}
+@keyframes spinner {
+    from {
+        transform: translateY(-50%) rotate(0);
+    }
+    to {
+        transform: translateY(-50%) rotate(360deg);
+    }
+}
+.search-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: var(--search-button-width);
+    height: 100%;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    font-size: 1.8rem;
+    color: rgb(22, 24, 35, 0.34);
+    &:hover {
+        cursor: pointer;
+        background-color: rgb(22, 24, 35, 0.03);
+    }
+    &:active {
+        background-color: rgb(22, 24, 35, 0.06);
+    }
+}
