Xây dựng UI phần sidebar #1

--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -60,7 +60,7 @@
     color: var(--white);
     background-color: var(--primary);
 }
-.user-avata {
+.user-avatar {
     width: 32px;
     height: 32px;
     margin-left: 14px;
